// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute balance endpoint should return success 1`] = `
{
  "data": {
    "result": [
      {
        "address": "3EyjZ6CtEZEKyc719NZMyWaJpJG5jsVJL1",
        "balance": "0",
        "chain": "mainnet",
        "coin": "btc",
      },
    ],
  },
  "jobRunID": "1",
  "result": [
    {
      "address": "3EyjZ6CtEZEKyc719NZMyWaJpJG5jsVJL1",
      "balance": "0",
      "chain": "mainnet",
      "coin": "btc",
    },
  ],
  "statusCode": 200,
}
`;

exports[`execute block endpoint should return success 1`] = `
{
  "data": {
    "result": 22674148233453,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 22674148233453,
  "statusCode": 200,
}
`;
